[gd_scene load_steps=33 format=3 uid="uid://bmr1qy18aq4d0"]

[ext_resource type="Script" path="res://Scripts/Gunner/gunner.gd" id="1_4e8e8"]
[ext_resource type="Texture2D" uid="uid://d3nxtq4obudn7" path="res://Assets/demon-gunner/spritesheets/1x/demon-gunner-master.png" id="1_5vtl4"]
[ext_resource type="Script" path="res://Scripts/Gunner/gunner_manager.gd" id="2_o0kvt"]
[ext_resource type="Shader" path="res://Scripts/hitflash.gdshader" id="3_kmugj"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="4_6c6io"]
[ext_resource type="Script" path="res://Scripts/Gunner/idle_still.gd" id="5_8aexd"]
[ext_resource type="Script" path="res://Scripts/Gunner/idle_move.gd" id="6_q7bhs"]
[ext_resource type="Script" path="res://Scripts/Gunner/idle_return.gd" id="7_85jio"]
[ext_resource type="Script" path="res://Scripts/Gunner/attack_move.gd" id="7_syj1g"]
[ext_resource type="Script" path="res://Scripts/Gunner/attack_shoot.gd" id="8_g2x8o"]
[ext_resource type="Script" path="res://Scripts/Gunner/death_fall.gd" id="9_lqyon"]
[ext_resource type="Script" path="res://Scripts/Gunner/death.gd" id="10_e124x"]
[ext_resource type="PackedScene" uid="uid://b4nt8ferk20x7" path="res://Scenes/Detectbox.tscn" id="11_4ps6d"]
[ext_resource type="PackedScene" uid="uid://b1mj2rau38rmd" path="res://Scenes/Hurtbox.tscn" id="13_yrc3n"]
[ext_resource type="PackedScene" uid="uid://unbq8lw5lfc4" path="res://Scenes/Hitbox.tscn" id="14_shg33"]
[ext_resource type="AudioStream" uid="uid://dha7tl6j1jkdb" path="res://Assets/sounds/player/walking.wav" id="16_vp0ip"]
[ext_resource type="AudioStream" uid="uid://dk5cfyyxv6cn0" path="res://Assets/sounds/player/player_death.mp3" id="17_ono3c"]
[ext_resource type="AudioStream" uid="uid://b41py48ykbx3o" path="res://Assets/sounds/gunner_grunt.mp3" id="18_56jqt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o3ebu"]
shader = ExtResource("3_kmugj")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5l0kn"]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id="Animation_7whhi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("state_machine/attack_shoot:fired")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("body:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Detectbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Attackbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Markerbox/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("audio/death:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("audio/walking:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nr2wx"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Detectbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Attackbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Markerbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("audio/death:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yickq"]
resource_name = "death_fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_y6juc"]
resource_name = "idle"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0, 1, 0, 1, 0]
}

[sub_resource type="Animation" id="Animation_12k6k"]
resource_name = "move"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio/walking:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}

[sub_resource type="Animation" id="Animation_kshyj"]
resource_name = "shoot"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("state_machine/attack_shoot:fired")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3ggq"]
_data = {
"RESET": SubResource("Animation_7whhi"),
"death": SubResource("Animation_nr2wx"),
"death_fall": SubResource("Animation_yickq"),
"idle": SubResource("Animation_y6juc"),
"move": SubResource("Animation_12k6k"),
"shoot": SubResource("Animation_kshyj")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eic2x"]
radius = 4.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p3263"]
radius = 18.0
height = 138.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_56v02"]
height = 70.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_347jn"]
radius = 4.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5cm4v"]
radius = 1.0

[node name="Gunner" type="CharacterBody2D"]
collision_layer = 260
collision_mask = 7
script = ExtResource("1_4e8e8")

[node name="gunner_manager" type="Node" parent="."]
script = ExtResource("2_o0kvt")

[node name="sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_o3ebu")
position = Vector2(0, -24)
texture = ExtResource("1_5vtl4")
hframes = 23

[node name="body" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5l0kn")

[node name="animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g3ggq")
}

[node name="Markerbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Markerbox"]
shape = SubResource("CapsuleShape2D_eic2x")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("4_6c6io")
starting_state = NodePath("idle_move")

[node name="idle_still" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_move_state", "attack_move_state", "attack_shoot_state", "death_fall_state")]
script = ExtResource("5_8aexd")
idle_move_state = NodePath("../idle_move")
attack_move_state = NodePath("../attack_move")
attack_shoot_state = NodePath("../attack_shoot")
death_fall_state = NodePath("../death_fall")
animation_name = "idle"

[node name="idle_move" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_still_state", "attack_move_state", "attack_shoot_state", "death_fall_state")]
script = ExtResource("6_q7bhs")
idle_still_state = NodePath("../idle_still")
attack_move_state = NodePath("../attack_move")
attack_shoot_state = NodePath("../attack_shoot")
death_fall_state = NodePath("../death_fall")
animation_name = "move"
move_speed = 25.0

[node name="idle_return" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_move_state", "attack_move_state", "death_fall_state")]
script = ExtResource("7_85jio")
idle_move_state = NodePath("../idle_move")
attack_move_state = NodePath("../attack_move")
death_fall_state = NodePath("../death_fall")
animation_name = "move"

[node name="attack_move" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_still_state", "attack_shoot_state", "death_fall_state")]
script = ExtResource("7_syj1g")
idle_still_state = NodePath("../idle_still")
attack_shoot_state = NodePath("../attack_shoot")
death_fall_state = NodePath("../death_fall")
animation_name = "move"
move_speed = 50.0

[node name="attack_shoot" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_still_state", "attack_shoot_state", "attack_move_state", "death_fall_state")]
script = ExtResource("8_g2x8o")
idle_still_state = NodePath("../idle_still")
attack_shoot_state = NodePath(".")
attack_move_state = NodePath("../attack_move")
death_fall_state = NodePath("../death_fall")
animation_name = "shoot"

[node name="death_fall" type="Node" parent="state_machine" node_paths=PackedStringArray("death_state")]
script = ExtResource("9_lqyon")
death_state = NodePath("../death")
animation_name = "death_fall"

[node name="death" type="Node" parent="state_machine"]
script = ExtResource("10_e124x")
animation_name = "death"

[node name="Detectbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("11_4ps6d")]
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Detectbox" index="0"]
position = Vector2(46, -10)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_p3263")

[node name="Attackbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("11_4ps6d")]
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Attackbox" index="0"]
position = Vector2(23, -2)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_56v02")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("13_yrc3n")]
collision_layer = 0
collision_mask = 72
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_347jn")

[node name="Hitbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("14_shg33")]
collision_layer = 0
collision_mask = 0
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(13, -1)
shape = SubResource("CircleShape2D_5cm4v")

[node name="audio" type="Node" parent="."]

[node name="walking" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("16_vp0ip")
volume_db = -10.0

[node name="death" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("17_ono3c")
volume_db = -10.0

[node name="grunt" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("18_56jqt")
volume_db = -10.0

[connection signal="animation_finished" from="animations" to="state_machine/idle_still" method="_on_animations_animation_finished"]
[connection signal="animation_finished" from="animations" to="state_machine/death" method="_on_animations_animation_finished"]
[connection signal="area_entered" from="Markerbox" to="state_machine/idle_move" method="_on_markerbox_area_entered"]
[connection signal="area_entered" from="Detectbox" to="gunner_manager" method="_on_detectbox_area_entered"]
[connection signal="area_exited" from="Detectbox" to="gunner_manager" method="_on_detectbox_area_exited"]
[connection signal="area_entered" from="Attackbox" to="gunner_manager" method="_on_attackbox_area_entered"]
[connection signal="area_exited" from="Attackbox" to="gunner_manager" method="_on_attackbox_area_exited"]
[connection signal="area_entered" from="Hurtbox" to="gunner_manager" method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="gunner_manager" method="_on_hurtbox_area_exited"]

[editable path="Detectbox"]
[editable path="Attackbox"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
